# github-bot-by-rust

./: .env.sample  .gitignore  Cargo.toml  vercel.json
.github/workflows/: build.yml
api/: bot.rs
src/: main.rs
src/github/: api.rs  mod.rs  models.rs  service.rs
src/telegram/: api.rs  mod.rs  service.rs
