[package]
name = "rust-github-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
reqwest = { version = "0.12.15", features = ["json"] }
teloxide = { version = "0.10.0", features = ["macros"] }
chrono = "0.4"
tokio-cron-scheduler = "0.14.0"
dotenv = "0.15"
log = "0.4.27"
simplelog = "0.12.2"
